# kedung

./: .gitignore  .pre-commit-config.yaml  README.md  config.toml  pyproject.toml
examples/: client.py  pyproject.toml  server.py
kedung/: __init__.py
kedung/client/: __init__.py  _helper.py  _protocol.py  _tmp_storage.py
kedung/server/: __init__.py  _commands.py  _protocol.py  _schdule.py  _serdes.py  _storage.py  _types.py
kedung/utils/: common_tasks.py  custom_types.py  dateandtime.py  exceptions.py  files.py  logging.py  unpacking.py  userconf.py
requirements/: requirements-dev.txt  requirements-test.txt  requirements.txt
tests/: pyproject.toml
tests/unit/: __init__.py
tests/unit/client/: test_arbitrary.py  test_main.py  test_protocol.py
tests/unit/server/: test_arbitrary.py  test_commands.py  test_main.py  test_protocol.py  test_schedule.py  test_storage.py
tests/unit/utils/: test_arbitrary.py  test_files.py  test_unpacking.py
