[project]
name = "kedung"
version = "0.0.1"
authors = [{name="xpecel"}]
description = "Simpel in-memory database berorientasikan key-value."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux"
]
dependencies = [
    "structlog==24.4.0"
]

[project.optional-dependencies]
test = [
    "pytest==8.3.2",
    "pluggy==1.5.0",
    "pytest-mock==3.14.0",
    "pytest-cov==5.0.0",
    "uvloop==0.20.0",
    "pytest-asyncio==0.24.0",
    "asyncmock==0.4.2",
]
dev = [
    "uvloop==0.20.0",
    "ruff==0.6.4",
    "mypy==1.11.2",
    "mypy-extensions==1.0.0",
    "typing-extensions==4.12.2",
    "pylsp-mypy==0.6.9",
]

[project.urls]
Homepage = "https://github.com/xpecel/kedung"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict_optional = true
ignore_missing_imports = false
show_column_numbers = true

[tool.pylsp-mypy]
enabled = true
live_mode = false
strict = true
report_progress = true
dmypy = false

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "*venv*",
    "*egg-info"
]
line-length = 88
indent-width = 4
target-version = "py311"
preview = false

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "PLR6301",
    "ANN102",
    "D401",
    "CPY001",
    "FBT001",
    "DOC201",
    "D203",
    "D213",
    "COM812",
    "ISC001",
    "D104",  # docstring in public package
    "D100",  # docstring in public module
]
extend-select = ["I"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pylint]
max-args = 10
max-positional-args = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
